WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
308353
[AppKit Gestures] Scrolling is not delegated to containing scrollviews when needed
https://bugs.webkit.org/show_bug.cgi?id=308353
Summary
[AppKit Gestures] Scrolling is not delegated to containing scrollviews when n...
Tim Horton
Reported
2026-02-20 18:31:21 PST
[AppKit Gestures] Scrolling is not delegated to containing scrollviews when needed
Attachments
Add attachment
proposed patch, testcase, etc.
Tim Horton
Comment 1
2026-02-20 18:31:22 PST
<
rdar://problem/165924859
>
Tim Horton
Comment 2
2026-02-20 18:45:28 PST
Pull request:
https://github.com/WebKit/WebKit/pull/59134
EWS
Comment 3
2026-02-24 12:28:57 PST
Committed
308147@main
(1bb4aac7b597): <
https://commits.webkit.org/308147@main
> Reviewed commits have been landed. Closing PR #59134 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug